samples/_failures_safe/1761192530_b86a56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c28eba9e.c: In function ‘main’:
./samples/SAFE/__tmp_c28eba9e.c:159:16: error: missing terminating " character
  159 |         printf("No input provided\n
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c28eba9e.c:159:9: error: expected expression at end of input
  159 |         printf("No input provided\n
      |         ^~~~~~
./samples/SAFE/__tmp_c28eba9e.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c28eba9e.c:159:9: error: expected declaration or statement at end of input
